[project]
name = "label-sommelier"
version = "2.0.0"
description = "Wine label scanning + preference matching + Kakao Map wine shop finder MCP server"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.40.0",
    "mcp[cli]>=1.7.1",
    "uvicorn[standard]>=0.30.0",
    "starlette>=0.40.0",
]

[[project.authors]]
name = "JINHYUK"
email = "9gleling@gmail.com"

[project.scripts]
label-sommelier = "label_sommelier:main"
label-sommelier-http = "label_sommelier.http_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/label_sommelier"]
